@@ -1,4 +1,4 @@
-FROM maven:3.8-openjdk-18 as builder
+FROM maven:3.9-eclipse-temurin-20 as builder
 LABEL maintainer="contact@bittich.be"
 
 WORKDIR /app
@@ -14,7 +14,7 @@ COPY ./event/src ./event/src
 
 RUN mvn package -DskipTests
 
-FROM ibm-semeru-runtimes:open-18-jre-focal
+FROM eclipse-temurin:20-jre-jammy
 LABEL maintainer="contact@bittich.be"
 
 RUN apt-get update
@@ -22,22 +22,22 @@ RUN apt-get update
 # Set timezone
 ENV CONTAINER_TIMEZONE 'Europe/Brussels'
 RUN apt-get update && apt-get install -y tzdata && \
-    rm /etc/localtime && \
-    ln -snf /usr/share/zoneinfo/$CONTAINER_TIMEZONE /etc/localtime &&  \
-    echo $CONTAINER_TIMEZONE > /etc/timezone && \
-    dpkg-reconfigure -f noninteractive tzdata && \
-    apt-get clean
+  rm /etc/localtime && \
+  ln -snf /usr/share/zoneinfo/$CONTAINER_TIMEZONE /etc/localtime &&  \
+  echo $CONTAINER_TIMEZONE > /etc/timezone && \
+  dpkg-reconfigure -f noninteractive tzdata && \
+  apt-get clean
 
 # install wkhtmltopdf
 RUN apt-get install -y  wget
 RUN apt-get install -y  fontconfig libjpeg-turbo8 libssl-dev libxext6 libxrender-dev xfonts-base xfonts-75dpi
-RUN wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6-1/wkhtmltox_0.12.6-1.focal_amd64.deb
-RUN dpkg -i wkhtmltox_0.12.6-1.focal_amd64.deb
+RUN wget https://github.com/wkhtmltopdf/packaging/releases/download/0.12.6.1-2/wkhtmltox_0.12.6.1-2.jammy_amd64.deb
+RUN dpkg -i wkhtmltox_0.12.6.1-2.jammy_amd64.deb
 
 # install mongodb tools
 RUN apt-get install -y gnupg
-RUN wget -qO - https://www.mongodb.org/static/pgp/server-5.0.asc | apt-key add -
-RUN echo "deb http://repo.mongodb.org/apt/debian buster/mongodb-org/5.0 main" | tee /etc/apt/sources.list.d/mongodb-org-5.0.list
+RUN wget -qO - https://www.mongodb.org/static/pgp/server-6.0.asc | apt-key add -
+RUN echo "deb http://repo.mongodb.org/apt/debian buster/mongodb-org/6.0 main" | tee /etc/apt/sources.list.d/mongodb-org-6.0.list
 RUN apt-get update
 RUN apt-get install -y mongodb-org-tools
 
@@ -45,5 +45,6 @@ WORKDIR /app
 
 COPY --from=builder /app/artcoded/target/api-backend.jar ./app.jar
 
-ENTRYPOINT [ "java", "-Xtune:virtualized", "-Xshareclasses:cacheDir=/opt/shareclasses", "-jar","/app/app.jar"]
+# add  "--log.file=/tmp/truffle.log" if it's too verbose
+ENTRYPOINT [ "java", "--enable-preview", "-jar","/app/app.jar"]
 
